# forecastmanager

./: .gitignore  MANIFEST.in  README.md  boot_django.py  email_reply_forecast_mobile.md  makemigrations.py  migrate.py  setup.cfg
.github/workflows/: publish.yml
forecastmanager/: admin.py  apps.py  blocks.py  constants.py  forecast_settings.py  forms.py  models.py  providers.py  serializers.py  site_settings.py  tasks.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
forecastmanager/migrations/: 0001_initial.py  0002_alter_forecast_condition_delete_conditioncategory.py  0002_remove_forecast_max_temp_remove_forecast_min_temp_and_more.py  0003_alter_forecast_unique_together.py  0004_alter_forecast_unique_together.py  0004_forecastdataparameters_parameter_type_and_more.py  0005_alter_forecast_unique_together.py  0005_alter_forecastdataparameters_parameter.py  0006_alter_forecast_unique_together.py  0006_alter_forecastsetting_enable_auto_forecast.py  0007_alter_forecast_unique_together.py  0007_remove_forecastsetting_temp_units_and_more.py  0008_alter_forecast_unique_together.py  0008_alter_forecastdataparameters_parameter_unit.py  0009_alter_forecastdataparameters_parameter_unit.py  0009_rename_setting_forecastsetting.py  0010_alter_forecast_unique_together.py  0010_alter_forecastdataparameters_parameter_type_and_more.py  0011_alter_forecastperiod_options_and_more.py  0011_dailyweather.py  0012_alter_forecastperiod_forecast_effective_time.py  0012_dailyweather_extreme_date_and_more.py  (+24 more)
sandbox/: requirements.txt
scripts/: generate_weather_icons.py
(+86 files in other folders)
