[metadata]
name = forecastmanager
version = 0.5.1
description = Integration of Weather City Forecasts Manager in Wagtail Projects.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/wmo-raf/forecastmanager
author = Grace Amondi, Erick Otenyo
author_email = miswa.grace@gmail.com, otenyo.erick@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    wagtail>=4.2.2
    wagtailgeowidget>=7.0.0
    django-filter
    wagtail-icon-chooser>=0.0.6
    wagtail-font-awesome-svg>=1.0.1
    django-extensions


